word wrap fixed

--- a/src/Chat.css
+++ b/src/Chat.css
@@ -25,6 +25,9 @@
     justify-content: space-between;
     min-width: 100px;
 }
+.chat_headerRight > .MuiSvgIcon-root{
+    color:gray;
+}
 .chat_body{
     background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
     flex: 1;
@@ -40,7 +43,11 @@
     background-color: #ffffff;
     border-radius: 10px;
     width: fit-content;
+    max-width:40%;
     margin-bottom: 30px;
+}
+.chat_message_info{
+    word-wrap: break-word;
 }
 .chat_name{
     position: absolute;
